@@ -360,3 +360,7 @@
 	appended to the final PCM block written.
 2017-09-04 Fred Gleason <fredg@paravelsystems.com>
 	* Added a '--pregap=' option to glassplayer(1).
+2017-09-04 Fred Gleason <fredg@paravelsystems.com>
+	* Documented the '--pregap=' option in the glasscoder(1) man page.
+	* Fixed a typo in the entry for the --stats-out' option in the
+	glasscoder(1) man page.
